Quick mock up with placeholder images

--- a/index.html
+++ b/index.html
@@ -8,7 +8,32 @@
 </head>
 <body>
     <div>
-        
+        <!-- Header img -->
+        <div class="header">
+            <img src="https://picsum.photos/800/200" alt="header">
+        </div>
+        <!-- body -->
+        <div class="main">
+            <h1>Super Mario 64</h1>
+            <hr>
+            <img class="marioIdle" src="https://picsum.photos/200/300" alt="Mario">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam totam unde harum fugiat enim recusandae at! Laudantium aperiam similique inventore dolorem quibusdam maxime optio provident aliquid non nesciunt. Nulla, corporis.
+            </p>
+            <!-- Row of images -->
+            <p>
+                <img src="https://picsum.photos/200" alt="">
+                <img src="https://picsum.photos/200" alt="">
+                <img src="https://picsum.photos/200" alt="">
+            </p>
+            <br>
+            <h2>Locaties in de game</h2>
+            <hr>
+            <img class="peachCastle" src="https://picsum.photos/300/200" alt="Peach's Castle">
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis corporis repellendus velit aliquid rerum saepe eligendi ut reiciendis iure, dicta harum similique soluta, magni, dolorum quo odio. Dolor, mollitia dolore?
+            </p>
+        </div>
     </div>
 </body>
 </html>
