--- a/index.html
+++ b/index.html
@@ -3,22 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Super Mario 64</title>
+    <link rel="shortcut icon" href="content/img/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="content/css/style.css">
+    <link rel="stylesheet" href="content/css/sm64colors.css">
 </head>
 <body>
     <div>
         <!-- Header img -->
-        <div class="header">
-            <img src="https://picsum.photos/800/200" alt="header">
-        </div>
-        <!-- body -->
+        <img class="header" src="content/img/header.jpg" alt="header">
+        <!-- Body -->
         <div class="main">
-            <h1>Super Mario 64</h1>
-            <hr>
-            <img class="marioIdle" src="https://picsum.photos/200/300" alt="Mario">
+            <h1 class="title"><red>S</red><blue>u</blue><yellow>p</yellow><blue>e</blue><green>r</green> <blue>M</blue><green>a</green><yellow>r</yellow><red>i</red><blue>o</blue> <red>64</red></h1>
+            <img class="marioIdle" src="content/img/marioIdle.gif" alt="Mario">
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam totam unde harum fugiat enim recusandae at! Laudantium aperiam similique inventore dolorem quibusdam maxime optio provident aliquid non nesciunt. Nulla, corporis.
+                Super Mario 64 is een 3D action adventure platformspel gemaakt en gepubliceerd door Nintendo.
+                Het spel werd voor het eerst uitgebracht in 1996 in Japan en Noord Amerika.
+                Het spel werd een jaar later in 1997 uitgebracht in Europa en Australië.
+                Het spel werd uitgebracht op de Nintendo 64 en is het eerste 3D Mario spel in de beroemde Mario serie.
             </p>
             <!-- Row of images -->
             <p>
@@ -27,8 +29,7 @@
                 <img src="https://picsum.photos/200" alt="">
             </p>
             <br>
-            <h2>Locaties in de game</h2>
-            <hr>
+            <h2><red>L</red><blue>o</blue><yellow>c</yellow><blue>a</blue><green>t</green><blue>i</blue><green>e</green><red>s</red> <yellow>i</yellow><red>n</red> <blue>d</blue><red>e</red> <blue>g</blue><yellow>a</yellow><blue>m</blue><green>e</green></h2>
             <img class="peachCastle" src="https://picsum.photos/300/200" alt="Peach's Castle">
             <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis corporis repellendus velit aliquid rerum saepe eligendi ut reiciendis iure, dicta harum similique soluta, magni, dolorum quo odio. Dolor, mollitia dolore?
