--- a/index.html
+++ b/index.html
@@ -15,24 +15,37 @@
         <!-- Body -->
         <div class="main">
             <h1 class="title"><red>S</red><blue>u</blue><yellow>p</yellow><blue>e</blue><green>r</green> <blue>M</blue><green>a</green><yellow>r</yellow><red>i</red><blue>o</blue> <red>64</red></h1>
-            <img class="marioIdle" src="content/img/marioIdle.gif" alt="Mario">
+            <span class="marioIdle"><img src="content/img/charcters/marioIdle.gif" alt="Mario"></span>
             <p>
                 Super Mario 64 is een 3D action adventure platformspel gemaakt en gepubliceerd door Nintendo.
                 Het spel werd voor het eerst uitgebracht in 1996 in Japan en Noord Amerika.
                 Het spel werd een jaar later in 1997 uitgebracht in Europa en Australië.
                 Het spel werd uitgebracht op de Nintendo 64 en is het eerste 3D Mario spel in de beroemde Mario serie.
+                <br>
+                <br>
+                De hoofdrolspeler in het spel is natuurlijk de welbekende Mario! 
+                Mario moet Princess Peach redden van de kwaadaardige Bowser, die haar gevangen heeft genomen in haar eigen kasteel.
+                Om Princess Peach te redden moet Mario door verschillende werelden en levels reizen en sterren verzamelen.
+                Mario komt in deze levels en werelden door schilderijen in het kasteel van Princess Peach te betreden.
+                <br>
+                <br>
+                De twee meest voorkomende vijanden in het spel zijn de Goomba en de Koopa Troopa.
+                De Goomba is een kleine bruine paddenstoelachtige vijand. De Goomba is erg makkelijk te verslaan, Mario hoeft er alleen maar op te springen.
+                De Koopa Troopa is een schildpadachtige vijand. De Koopa Troopa is iets moeilijker te verslaan dan de Goomba. 
+                Als Mario op de Koopa Troopa springt vliegt de Koopa Troopa uit zijn schild en kan Mario de Koopa Troopa verslaan en het schild gebruiken als wapen.
             </p>
             <!-- Row of images -->
-            <p>
-                <img src="https://picsum.photos/200" alt="">
-                <img src="https://picsum.photos/200" alt="">
-                <img src="https://picsum.photos/200" alt="">
-            </p>
+            <div class="imgContainer">
+                <span><img src="content/img/charcters/goomba.webp" height="200" alt="Een Goomba uit Super Mario 64."></span>
+                <span><img src="content/img/charcters/koopatroopa.webp" height="200" alt="Een Koopa Troopa uit Super Mario 64."></span>
+                <span><img src="content/img/charcters/bowser.webp" height="200" alt="Bowser uit Super Mario 64"></span>
+                <span><img src="content/img/charcters/princesspeach.webp" height="200" alt="Princes Peach ui Super Mario 64"></span>
+            </div>
             <br>
             <h2><red>L</red><blue>o</blue><yellow>c</yellow><blue>a</blue><green>t</green><blue>i</blue><green>e</green><red>s</red> <yellow>i</yellow><red>n</red> <blue>d</blue><red>e</red> <blue>g</blue><yellow>a</yellow><blue>m</blue><green>e</green></h2>
-            <img class="peachCastle" src="https://picsum.photos/300/200" alt="Peach's Castle">
+            <img class="peachCastle" src="https://picsum.photos/300/200" alt="Placeholder">
             <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis corporis repellendus velit aliquid rerum saepe eligendi ut reiciendis iure, dicta harum similique soluta, magni, dolorum quo odio. Dolor, mollitia dolore?
+                
             </p>
         </div>
     </div>
