Locations and separate the css for the images

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="content/img/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="content/css/style.css">
     <link rel="stylesheet" href="content/css/sm64colors.css">
+    <link rel="stylesheet" href="content/css/img.css">
 </head>
 <body>
     <div>
@@ -42,10 +43,14 @@
                 <span><img src="content/img/charcters/princesspeach.webp" height="200" alt="Princes Peach ui Super Mario 64"></span>
             </div>
             <br>
-            <h2><red>L</red><blue>o</blue><yellow>c</yellow><blue>a</blue><green>t</green><blue>i</blue><green>e</green><red>s</red> <yellow>i</yellow><red>n</red> <blue>d</blue><red>e</red> <blue>g</blue><yellow>a</yellow><blue>m</blue><green>e</green></h2>
-            <img class="peachCastle" src="https://picsum.photos/300/200" alt="Placeholder">
+            <h2 class="title2"><red>L</red><blue>o</blue><yellow>c</yellow><blue>a</blue><green>t</green><blue>i</blue><green>e</green><red>s</red> <yellow>i</yellow><red>n</red> <blue>d</blue><red>e</red> <blue>g</blue><yellow>a</yellow><blue>m</blue><green>e</green></h2>
+            <div class="imgContainerLoc">
+                <img src="content/img/locations/mushroom_castle.webp" alt="Het Mushroom Kasteel van Super Mario 64" width="212" class="first">
+                <img src="content/img/locations/bob-omb_battlefield.webp" alt="Bob-omb Battlefield uit Super Mario 64" width="212">
+                <img src="content/img/locations/peachscastle.webp" alt="Close up van Het Mushroom kasteel uit Super Mario 64" width="212" class="last">
+            </div>
             <p>
-                
+                Aan het begin van het spel bevindt Mario zich in het Mushroom Kasteel.
             </p>
         </div>
     </div>
