Styling plus todo's

--- a/index.html
+++ b/index.html
@@ -8,50 +8,52 @@
     <link rel="stylesheet" href="content/css/style.css">
     <link rel="stylesheet" href="content/css/sm64colors.css">
     <link rel="stylesheet" href="content/css/img.css">
+    <script src="content/js/rotation.js"></script>
 </head>
 <body>
     <div>
         <!-- Header img -->
         <img class="header" src="content/img/header.jpg" alt="header">
-        <!-- Body -->
         <div class="main">
-            <h1 class="title"><red>S</red><blue>u</blue><yellow>p</yellow><blue>e</blue><green>r</green> <blue>M</blue><green>a</green><yellow>r</yellow><red>i</red><blue>o</blue> <red>64</red></h1>
-            <span class="marioIdle"><img src="content/img/charcters/marioIdle.gif" alt="Mario"></span>
-            <p>
-                Super Mario 64 is een 3D action adventure platformspel gemaakt en gepubliceerd door Nintendo.
-                Het spel werd voor het eerst uitgebracht in 1996 in Japan en Noord Amerika.
-                Het spel werd een jaar later in 1997 uitgebracht in Europa en Australië.
-                Het spel werd uitgebracht op de Nintendo 64 en is het eerste 3D Mario spel in de beroemde Mario serie.
-                <br>
-                <br>
-                De hoofdrolspeler in het spel is natuurlijk de welbekende Mario! 
-                Mario moet Princess Peach redden van de kwaadaardige Bowser, die haar gevangen heeft genomen in haar eigen kasteel.
-                Om Princess Peach te redden moet Mario door verschillende werelden en levels reizen en sterren verzamelen.
-                Mario komt in deze levels en werelden door schilderijen in het kasteel van Princess Peach te betreden.
-                <br>
-                <br>
-                De twee meest voorkomende vijanden in het spel zijn de Goomba en de Koopa Troopa.
-                De Goomba is een kleine bruine paddenstoelachtige vijand. De Goomba is erg makkelijk te verslaan, Mario hoeft er alleen maar op te springen.
-                De Koopa Troopa is een schildpadachtige vijand. De Koopa Troopa is iets moeilijker te verslaan dan de Goomba. 
-                Als Mario op de Koopa Troopa springt vliegt de Koopa Troopa uit zijn schild en kan Mario de Koopa Troopa verslaan en het schild gebruiken als wapen.
-            </p>
-            <!-- Row of images -->
-            <div class="imgContainer">
-                <span><img src="content/img/charcters/goomba.webp" height="200" alt="Een Goomba uit Super Mario 64."></span>
-                <span><img src="content/img/charcters/koopatroopa.webp" height="200" alt="Een Koopa Troopa uit Super Mario 64."></span>
-                <span><img src="content/img/charcters/bowser.webp" height="200" alt="Bowser uit Super Mario 64"></span>
-                <span><img src="content/img/charcters/princesspeach.webp" height="200" alt="Princes Peach ui Super Mario 64"></span>
+            <div id="about">
+                <h1 class="title"><red>S</red><blue>u</blue><yellow>p</yellow><blue>e</blue><green>r</green> <blue>M</blue><green>a</green><yellow>r</yellow><red>i</red><blue>o</blue> <red>64</red></h1>
+                <span class="marioIdle"><img src="content/img/charcters/marioIdle.gif" alt="Mario"></span>
+                <p>
+                    Super Mario 64 is een 3D action adventure platformspel gemaakt en gepubliceerd door Nintendo.
+                    Het spel werd voor het eerst uitgebracht in 1996 in Japan en Noord Amerika.
+                    Het spel werd een jaar later in 1997 uitgebracht in Europa en Australië.
+                    Het spel werd uitgebracht op de Nintendo 64 en is het eerste 3D Mario spel in de beroemde Mario serie.
+                </p>
+                <p>
+                    De hoofdrolspeler in het spel is natuurlijk de welbekende Mario!
+                    Mario moet Princess Peach redden van de kwaadaardige Bowser, die haar gevangen heeft genomen in haar eigen kasteel.
+                    Om Princess Peach te redden moet Mario door verschillende werelden en levels reizen en sterren verzamelen.
+                    Mario komt in deze levels en werelden door schilderijen in het kasteel van Princess Peach te betreden.
+                </p>
+                <p>
+                    De twee meest voorkomende vijanden in het spel zijn de Goomba en de Koopa Troopa.
+                    De Goomba is een kleine bruine paddenstoelachtige vijand. De Goomba is erg makkelijk te verslaan, Mario hoeft er alleen maar op te springen.
+                    De Koopa Troopa is een schildpadachtige vijand. De Koopa Troopa is iets moeilijker te verslaan dan de Goomba.
+                    Als Mario op de Koopa Troopa springt vliegt de Koopa Troopa uit zijn schild en kan Mario de Koopa Troopa verslaan en het schild gebruiken als wapen.
+                </p>
+                <div class="imgContainer">
+                    <span><img src="content/img/charcters/goomba.webp" height="200" alt="Een Goomba uit Super Mario 64."></span>
+                    <span><img src="content/img/charcters/koopatroopa.webp" height="200" alt="Een Koopa Troopa uit Super Mario 64."></span>
+                    <span><img src="content/img/charcters/bowser.webp" height="200" alt="Bowser uit Super Mario 64"></span>
+                    <span><img src="content/img/charcters/princesspeach.webp" height="200" alt="Princes Peach ui Super Mario 64"></span>
+                </div>
             </div>
-            <br>
-            <h2 class="title2"><red>L</red><blue>o</blue><yellow>c</yellow><blue>a</blue><green>t</green><blue>i</blue><green>e</green><red>s</red> <yellow>i</yellow><red>n</red> <blue>d</blue><red>e</red> <blue>g</blue><yellow>a</yellow><blue>m</blue><green>e</green></h2>
-            <div class="imgContainerLoc">
-                <img src="content/img/locations/mushroom_castle.webp" alt="Het Mushroom Kasteel van Super Mario 64" width="212" class="first">
-                <img src="content/img/locations/bob-omb_battlefield.webp" alt="Bob-omb Battlefield uit Super Mario 64" width="212">
-                <img src="content/img/locations/peachscastle.webp" alt="Close up van Het Mushroom kasteel uit Super Mario 64" width="212" class="last">
+            <div id="locations">
+                <h2 class="title2"><red>L</red><blue>o</blue><yellow>c</yellow><blue>a</blue><green>t</green><blue>i</blue><green>e</green><red>s</red> <yellow>i</yellow><red>n</red> <blue>d</blue><red>e</red> <blue>g</blue><yellow>a</yellow><blue>m</blue><green>e</green></h2>
+                <div class="imgContainerLoc">
+                    <img src="content/img/locations/mushroom_castle.webp" alt="Het Mushroom Kasteel van Super Mario 64" width="212" class="first">
+                    <img src="content/img/locations/bob-omb_battlefield.webp" alt="Bob-omb Battlefield uit Super Mario 64" width="212">
+                    <img src="content/img/locations/peachscastle.webp" alt="Close up van Het Mushroom kasteel uit Super Mario 64" width="212" class="last">
+                </div>
+                <p>
+                    Aan het begin van het spel springt Mario uit een groen Warp Pipe en komt hij terecht in de tuin van het Mushroom Kasteel.
+                </p>
             </div>
-            <p>
-                Aan het begin van het spel bevindt Mario zich in het Mushroom Kasteel.
-            </p>
         </div>
     </div>
 </body>
