--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="main">
             <div id="about">
                 <h1 class="title"><red>S</red><blue>u</blue><yellow>p</yellow><blue>e</blue><green>r</green> <blue>M</blue><green>a</green><yellow>r</yellow><red>i</red><blue>o</blue> <red>64</red></h1>
-                <span class="marioIdle"><img src="content/img/charcters/marioIdle.gif" alt="Mario"></span>
+                <span class="marioIdle"><img src="content/img/charcters/marioIdle.gif" alt="Mario" height="300px"></span>
                 <p>
                     Super Mario 64 is een 3D action adventure platformspel gemaakt en gepubliceerd door Nintendo.
                     Het spel werd voor het eerst uitgebracht in 1996 in Japan en Noord Amerika.
@@ -31,14 +31,17 @@
                     Mario komt in deze levels en werelden door schilderijen in het kasteel van Princess Peach te betreden.
                 </p>
                 <p>
-                    De twee meest voorkomende vijanden in het spel zijn de Goomba en de Koopa Troopa.
+                    De drie meest voorkomende vijanden in het spel zijn de Goomba, Koopa Troopa en Bob-omb.
                     De Goomba is een kleine bruine paddenstoelachtige vijand. De Goomba is erg makkelijk te verslaan, Mario hoeft er alleen maar op te springen.
                     De Koopa Troopa is een schildpadachtige vijand. De Koopa Troopa is iets moeilijker te verslaan dan de Goomba.
                     Als Mario op de Koopa Troopa springt vliegt de Koopa Troopa uit zijn schild en kan Mario de Koopa Troopa verslaan en het schild gebruiken als wapen.
+                    De Bob-omb is een bomachtige vijand. De Bob-omb is de moeilijkste van de drie vijanden om te verslaan, want de Bob-omb rent achter Mario totdat hij ontploft.
+                    Mario kan de Bob-omb oppakken en deze gooien. 
                 </p>
                 <div class="imgContainer">
                     <span><img src="content/img/charcters/goomba.webp" height="200" alt="Een Goomba uit Super Mario 64."></span>
                     <span><img src="content/img/charcters/koopatroopa.webp" height="200" alt="Een Koopa Troopa uit Super Mario 64."></span>
+                    <span><img src="content/img/charcters/bob-omb.webp" alt="een Bob-omb uit Super Mario 64" height="200"></span>
                     <span><img src="content/img/charcters/bowser.webp" height="200" alt="Bowser uit Super Mario 64"></span>
                     <span><img src="content/img/charcters/princesspeach.webp" height="200" alt="Princes Peach ui Super Mario 64"></span>
                 </div>
@@ -46,12 +49,18 @@
             <div id="locations">
                 <h2 class="title2"><red>L</red><blue>o</blue><yellow>c</yellow><blue>a</blue><green>t</green><blue>i</blue><green>e</green><red>s</red> <yellow>i</yellow><red>n</red> <blue>d</blue><red>e</red> <blue>g</blue><yellow>a</yellow><blue>m</blue><green>e</green></h2>
                 <div class="imgContainerLoc">
-                    <img src="content/img/locations/mushroom_castle.webp" alt="Het Mushroom Kasteel van Super Mario 64" width="212" class="first">
-                    <img src="content/img/locations/bob-omb_battlefield.webp" alt="Bob-omb Battlefield uit Super Mario 64" width="212">
-                    <img src="content/img/locations/peachscastle.webp" alt="Close up van Het Mushroom kasteel uit Super Mario 64" width="212" class="last">
+                    <img src="content/img/locations/peachscastle.webp" alt="Close up van Het Mushroom kasteel uit Super Mario 64" width="181" class="first">
+                    <img src="content/img/locations/mushroom_castle.webp" alt="Het Mushroom Kasteel van Super Mario 64" width="181">
+                    <img src="content/img/locations/bob-omb_battlefield.webp" alt="Bob-omb Battlefield uit Super Mario 64" width="181" class="last">
                 </div>
                 <p>
                     Aan het begin van het spel springt Mario uit een groen Warp Pipe en komt hij terecht in de tuin van het Mushroom Kasteel.
+                    Het Mushroom Kasteel is het kasteel van Princess Peach en is de thuisbasis van Mario in Super Mario 64. 
+                    In het kasteel zijn verschillende kamers en gangen die Mario kan verkennen, waarin hij verschillende schilderijen kan vinden die hem naar verschillende werelden en levels brengen.
+                    <br><br>
+                    Het eerste schilderij dat Mario tegenkomt is het schilderij van Bob-omb Battlefield.
+                    Bob-omb Battlefield is het eerste level dat Mario kan betreden in Super Mario 64, hier komt Mario de eerste vijanden, zoals de Goomba, Koopa Troopa en Bob-omb tegen.
+                    Ook kan Mario zijn eerste sterren verzamelen in Bob-omb Battlefield. Deze sterren zijn nodig om deuren in het Mushroom Kasteel te openen, waar achter Mario nog meer schilderijen kan vinden.
                 </p>
             </div>
         </div>
