--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
                     <span><img src="content/img/charcters/koopatroopa.webp" height="200" alt="Een Koopa Troopa uit Super Mario 64."></span>
                     <span><img src="content/img/charcters/bob-omb.webp" alt="een Bob-omb uit Super Mario 64" height="200"></span>
                     <span><img src="content/img/charcters/bowser.webp" height="200" alt="Bowser uit Super Mario 64"></span>
-                    <span><img src="content/img/charcters/princesspeach.webp" height="200" alt="Princes Peach ui Super Mario 64"></span>
+                    <span><img src="content/img/charcters/princesspeach.webp" height="200" alt="Princes Peach uit Super Mario 64"></span>
                 </div>
             </div>
             <div id="locations">
                 <h2 class="title2"><red>L</red><blue>o</blue><yellow>c</yellow><blue>a</blue><green>t</green><blue>i</blue><green>e</green><red>s</red> <yellow>i</yellow><red>n</red> <blue>d</blue><red>e</red> <blue>g</blue><yellow>a</yellow><blue>m</blue><green>e</green></h2>
                 <div class="imgContainerLoc">
-                    <img src="content/img/locations/peachscastle.webp" alt="Close up van Het Mushroom kasteel uit Super Mario 64" width="181" class="first">
-                    <img src="content/img/locations/mushroom_castle.webp" alt="Het Mushroom Kasteel van Super Mario 64" width="181">
-                    <img src="content/img/locations/bob-omb_battlefield.webp" alt="Bob-omb Battlefield uit Super Mario 64" width="181" class="last">
+                    <img src="content/img/locations/peachscastle.webp" alt="Close up van Het Mushroom kasteel uit Super Mario 64" width="189" class="first">
+                    <img src="content/img/locations/mushroom_castle.webp" alt="Het Mushroom Kasteel van Super Mario 64" width="189">
+                    <img src="content/img/locations/bob-omb_battlefield.webp" alt="Bob-omb Battlefield uit Super Mario 64" width="189" class="last">
                 </div>
                 <p>
                     Aan het begin van het spel springt Mario uit een groen Warp Pipe en komt hij terecht in de tuin van het Mushroom Kasteel.
