--- a/index.html
+++ b/index.html
@@ -8,20 +8,23 @@
     <link rel="stylesheet" href="content/css/style.css">
     <link rel="stylesheet" href="content/css/sm64colors.css">
     <link rel="stylesheet" href="content/css/img.css">
-    <script src="content/js/rotation.js"></script>
 </head>
 <body>
+    <!-- Start -->
     <div>
         <!-- Header img -->
         <img class="header" src="content/img/header.jpg" alt="header">
         <div class="main">
             <div id="about">
+                <!-- titel -->
                 <h1 class="title"><red>S</red><blue>u</blue><yellow>p</yellow><blue>e</blue><green>r</green> <blue>M</blue><green>a</green><yellow>r</yellow><red>i</red><blue>o</blue> <red>64</red></h1>
+                <!-- Gif van mario die staat -->
                 <span class="marioIdle"><img src="content/img/charcters/marioIdle.gif" alt="Mario" height="300px"></span>
+                <!-- Tekst over de maker, de hoofd karakters en eerste 3 vijanden -->
                 <p>
                     Super Mario 64 is een 3D action adventure platformspel gemaakt en gepubliceerd door Nintendo.
                     Het spel werd voor het eerst uitgebracht in 1996 in Japan en Noord Amerika.
-                    Het spel werd een jaar later in 1997 uitgebracht in Europa en Australië.
+                    Het werd een jaar later in 1997 uitgebracht in Europa en Australië.
                     Het spel werd uitgebracht op de Nintendo 64 en is het eerste 3D Mario spel in de beroemde Mario serie.
                 </p>
                 <p>
@@ -38,6 +41,7 @@
                     De Bob-omb is een bomachtige vijand. De Bob-omb is de moeilijkste van de drie vijanden om te verslaan, want de Bob-omb rent achter Mario totdat hij ontploft.
                     Mario kan de Bob-omb oppakken en deze gooien. 
                 </p>
+                <!-- Rij van plaatjes vijanden, hoofd karakters -->
                 <div class="imgContainer">
                     <span><img src="content/img/charcters/goomba.webp" height="200" alt="Een Goomba uit Super Mario 64."></span>
                     <span><img src="content/img/charcters/koopatroopa.webp" height="200" alt="Een Koopa Troopa uit Super Mario 64."></span>
@@ -47,12 +51,15 @@
                 </div>
             </div>
             <div id="locations">
+                <!-- h2 titel -->
                 <h2 class="title2"><red>L</red><blue>o</blue><yellow>c</yellow><blue>a</blue><green>t</green><blue>i</blue><green>e</green><red>s</red> <yellow>i</yellow><red>n</red> <blue>d</blue><red>e</red> <blue>g</blue><yellow>a</yellow><blue>m</blue><green>e</green></h2>
+                <!-- Plaatjes van de locaties -->
                 <div class="imgContainerLoc">
                     <img src="content/img/locations/peachscastle.webp" alt="Close up van Het Mushroom kasteel uit Super Mario 64" width="189" class="first">
                     <img src="content/img/locations/mushroom_castle.webp" alt="Het Mushroom Kasteel van Super Mario 64" width="189">
                     <img src="content/img/locations/bob-omb_battlefield.webp" alt="Bob-omb Battlefield uit Super Mario 64" width="189" class="last">
                 </div>
+                <!-- Info over locaties in het spel -->
                 <p>
                     Aan het begin van het spel springt Mario uit een groen Warp Pipe en komt hij terecht in de tuin van het Mushroom Kasteel.
                     Het Mushroom Kasteel is het kasteel van Princess Peach en is de thuisbasis van Mario in Super Mario 64. 
@@ -65,5 +72,6 @@
             </div>
         </div>
     </div>
+    <!-- End -->
 </body>
 </html>
