Change picture to inside of castle

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <!-- Plaatjes van de locaties -->
                 <div class="imgContainerLoc">
                     <img src="content/img/locations/peachscastle.webp" alt="Close up van Het Mushroom kasteel uit Super Mario 64" width="189" class="first">
-                    <img src="content/img/locations/mushroom_castle.webp" alt="Het Mushroom Kasteel van Super Mario 64" width="189">
+                    <img src="content/img/locations/mushroomcastlle_inside.png" alt="Het Mushroom Kasteel van Super Mario 64" width="189">
                     <img src="content/img/locations/bob-omb_battlefield.webp" alt="Bob-omb Battlefield uit Super Mario 64" width="189" class="last">
                 </div>
                 <!-- Info over locaties in het spel -->
